--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -106,7 +106,7 @@ FlightCameraControlExperimentalNavigation=False
 MinimumOrthographicZoom=250.000000
 bAllowArcballRotate=False
 bAllowScreenRotate=False
-SnapToSurface=(bEnabled=True,SnapOffsetExtent=1.000000,bSnapRotation=True)
+SnapToSurface=(bEnabled=False,SnapOffsetExtent=1.000000,bSnapRotation=True)
 bEnableLayerSnap=False
 ActiveSnapLayerIndex=0
 PreserveNonUniformScale=False
@@ -253,7 +253,7 @@ ContentBrowserTab1.CurrentViewType=1
 LastLevel=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1433,7 +1433,7 @@ NodeTemplateCacheCapMB=20.000000
 
 [RootWindow]
 ScreenPosition=X=4.800 Y=0.000
-WindowSize=X=1286.400 Y=726.400
+WindowSize=X=1288.000 Y=728.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
