--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -286,6 +286,8 @@ LastLevel=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Character/Animations/ThirdPerson_AnimBP.ThirdPerson_AnimBP
+OpenAssetsAtExit=/Game/Character/Animations/JumpRunJump.JumpRunJump
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1298,7 +1300,7 @@ PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
-Object=
+Object="\"Object.SkeletalMeshes\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 PreviewMaterial="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.Lightmass.LightmassSettings\" "
@@ -1466,26 +1468,26 @@ LastLogListing=FBXImport
 InstalledPlugins=XRVisualization
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Character/Animations/PistolJumpRunJump
-MRUItem1=/Game/Character/Animations/PistolRunWalk
-MRUItem2=/Game/SideScrollerBP/Blueprints/SideScrollerCharacter
-MRUItem3=/Game/Character/Animations/ThirdPerson_AnimBP
-MRUItem4=/Game/Character/Animations/PistolAnimations/PistolJump_UE
-MRUItem5=/Engine/Animation/DefaultAnimBoneCompressionSettings
-MRUItem6=/Game/Character/Animations/ThirdPersonJump_Loop
-MRUItem7=/Game/Character/Animations/ThirdPersonJump_Start
-MRUItem8=/Game/Character/Animations/ThirdPerson_IdleRun_2D
-MRUItem9=/Game/Character/MainChar/Mesh/SK_Mannequin
-MRUItem10=/Game/Character/PistolAnimations/PistolIdle1_UE
-MRUItem11=/Game/astro/Pistol_Jump
-MRUItem12=/Game/astro/astro
-MRUItem13=/Game/astro/Pistol_Idle
-MRUItem14=/Engine/VREditor/Sounds/VR_objectRotateLoop_01_Cue
-MRUItem15=/Game/SideScrollerBP/sound/platform
-MRUItem16=/Game/SideScrollerBP/Blueprints/MovingPlatform
-MRUItem17=/Game/SideScrollerBP/trimsheetscifi_Plane_009
-MRUItem18=/Game/SideScrollerBP/sound/NewSoundAttenuation
-MRUItem19=/Game/SideScrollerBP/Blueprints/ButtonBP
+MRUItem0=/Game/Character/Animations/JumpRunJump
+MRUItem1=/Game/Character/Animations/ThirdPerson_AnimBP
+MRUItem2=/Game/Character/Animations/NewBlendSpace1D
+MRUItem3=/Game/Character/Animations/PistolRunWalk
+MRUItem4=/Game/Character/Animations/PistolJumpRunJump
+MRUItem5=/Game/SideScrollerBP/Blueprints/SideScrollerCharacter
+MRUItem6=/Game/Character/Animations/PistolAnimations/PistolJump_UE
+MRUItem7=/Engine/Animation/DefaultAnimBoneCompressionSettings
+MRUItem8=/Game/Character/Animations/ThirdPersonJump_Loop
+MRUItem9=/Game/Character/Animations/ThirdPersonJump_Start
+MRUItem10=/Game/Character/Animations/ThirdPerson_IdleRun_2D
+MRUItem11=/Game/Character/MainChar/Mesh/SK_Mannequin
+MRUItem12=/Game/Character/PistolAnimations/PistolIdle1_UE
+MRUItem13=/Game/astro/Pistol_Jump
+MRUItem14=/Game/astro/astro
+MRUItem15=/Game/astro/Pistol_Idle
+MRUItem16=/Engine/VREditor/Sounds/VR_objectRotateLoop_01_Cue
+MRUItem17=/Game/SideScrollerBP/sound/platform
+MRUItem18=/Game/SideScrollerBP/Blueprints/MovingPlatform
+MRUItem19=/Game/SideScrollerBP/trimsheetscifi_Plane_009
 
 [PlacementMode]
 RecentlyPlaced=/Game/SideScrollerBP/Blueprints/MovingPlatform.MovingPlatform;
@@ -1681,6 +1683,7 @@ FbxImportUI.Miscellaneous=True
 /Game/Character/Animations/PistolJumpRunJump.PistolJumpRunJump=1
 /Game/Character/Animations/ThirdPerson_AnimBP.ThirdPerson_AnimBP=1
 /Game/Character/Animations/PistolRunWalk.PistolRunWalk=1
+/Game/Character/Animations/NewBlendSpace1D.NewBlendSpace1D=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1720,7 +1723,7 @@ NodeTemplateCacheCapMB=20.000000
 
 [RootWindow]
 ScreenPosition=X=4.800 Y=0.000
-WindowSize=X=1302.400 Y=742.400
+WindowSize=X=1304.000 Y=744.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
