--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -286,8 +286,6 @@ LastLevel=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Character/Animations/ThirdPerson_AnimBP.ThirdPerson_AnimBP
-OpenAssetsAtExit=/Game/Character/Animations/JumpRunJump.JumpRunJump
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1300,7 +1298,7 @@ PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
-Object="\"Object.SkeletalMeshes\" "
+Object=
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 PreviewMaterial="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.Lightmass.LightmassSettings\" "
@@ -1462,24 +1460,24 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=LoadErrors
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Character/Animations/JumpRunJump
-MRUItem1=/Game/Character/Animations/ThirdPerson_AnimBP
-MRUItem2=/Game/Character/Animations/NewBlendSpace1D
-MRUItem3=/Game/Character/Animations/PistolRunWalk
-MRUItem4=/Game/Character/Animations/PistolJumpRunJump
-MRUItem5=/Game/SideScrollerBP/Blueprints/SideScrollerCharacter
-MRUItem6=/Game/Character/Animations/PistolAnimations/PistolJump_UE
-MRUItem7=/Engine/Animation/DefaultAnimBoneCompressionSettings
-MRUItem8=/Game/Character/Animations/ThirdPersonJump_Loop
-MRUItem9=/Game/Character/Animations/ThirdPersonJump_Start
-MRUItem10=/Game/Character/Animations/ThirdPerson_IdleRun_2D
-MRUItem11=/Game/Character/MainChar/Mesh/SK_Mannequin
+MRUItem0=/Game/Character/Animations/ThirdPerson_AnimBP
+MRUItem1=/Game/Character/MainChar/Mesh/SK_Mannequin
+MRUItem2=/Game/SideScrollerBP/Blueprints/SideScrollerCharacter
+MRUItem3=/Game/Character/Animations/JumpRunJump
+MRUItem4=/Game/Character/Animations/NewBlendSpace1D
+MRUItem5=/Game/Character/Animations/PistolRunWalk
+MRUItem6=/Game/Character/Animations/PistolJumpRunJump
+MRUItem7=/Game/Character/Animations/PistolAnimations/PistolJump_UE
+MRUItem8=/Engine/Animation/DefaultAnimBoneCompressionSettings
+MRUItem9=/Game/Character/Animations/ThirdPersonJump_Loop
+MRUItem10=/Game/Character/Animations/ThirdPersonJump_Start
+MRUItem11=/Game/Character/Animations/ThirdPerson_IdleRun_2D
 MRUItem12=/Game/Character/PistolAnimations/PistolIdle1_UE
 MRUItem13=/Game/astro/Pistol_Jump
 MRUItem14=/Game/astro/astro
@@ -1684,6 +1682,7 @@ FbxImportUI.Miscellaneous=True
 /Game/Character/Animations/ThirdPerson_AnimBP.ThirdPerson_AnimBP=1
 /Game/Character/Animations/PistolRunWalk.PistolRunWalk=1
 /Game/Character/Animations/NewBlendSpace1D.NewBlendSpace1D=1
+/Game/Character/Animations/JumpRunJump.JumpRunJump=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1723,7 +1722,7 @@ NodeTemplateCacheCapMB=20.000000
 
 [RootWindow]
 ScreenPosition=X=4.800 Y=0.000
-WindowSize=X=1304.000 Y=744.000
+WindowSize=X=1305.600 Y=745.600
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
