post proses yansima eklendi

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -145,7 +145,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [DetailCustomWidgetExpansion]
-PostProcessVolume=PostProcessVolume.Lens.Lens,
+PostProcessVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Rendering Features.Rendering Features|Reflections,PostProcessVolume.Rendering Features.Rendering Features|Ambient Occlusion,PostProcessVolume.Rendering Features.Rendering Features|Translucency,PostProcessVolume.Rendering Features.Rendering Features|Misc,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Reflections,PostProcessVolume.Rendering Features.Rendering Features|Screen Space Reflections,PostProcessVolume.Rendering Features.Rendering Features|Global Illumination,PostProcessVolume.Lens.Lens|Depth of Field,PostProcessVolume.Lens.Lens|Mobile Depth of Field,
 BrushComponent=
 CryptoKeysSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,
 GeneralProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,
@@ -234,6 +234,8 @@ MovingPlatform_C=
 PropertyWrapper=PostProcessVolume.Lens.Lens,
 SideScrollerCharacter_C=
 BlendSpace1D=BlendSpace1D.BlendSamples.GroupName,BlendSpace1D.Axis Settings.Horizontal Axis,
+CameraComponent=CameraComponent.PostProcess.Rendering Features,CameraComponent.PostProcess.Rendering Features|Ambient Occlusion,CameraComponent.PostProcess.Rendering Features|Reflections,CameraComponent.PostProcess.Rendering Features|Screen Space Reflections,CameraComponent.PostProcess.Rendering Features|Translucency,CameraComponent.PostProcess.Rendering Features|Global Illumination,CameraComponent.PostProcess.Lens,CameraComponent.PostProcess.Lens|Bloom,CameraComponent.PostProcess.Lens|Mobile Depth of Field,
+CapsuleComponent=PostProcessVolume.Lens.Lens,PostProcessVolume.Rendering Features.Rendering Features|Ambient Cubemap,PostProcessVolume.Rendering Features.Rendering Features|Ambient Occlusion,
 
 [ContentBrowser]
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -289,6 +291,7 @@ LastLevel=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/SideScrollerBP/Blueprints/SideScrollerCharacter.SideScrollerCharacter
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1085,7 +1088,7 @@ CameraComponent.Sockets=True
 CameraComponent.CameraSettings=True
 CameraComponent.CameraOptions=True
 CameraComponent.Camera=True
-CameraComponent.PostProcess=True
+CameraComponent.PostProcess=False
 CameraComponent.ComponentTick=True
 CameraComponent.Lens=True
 CameraComponent.Color Grading=True
@@ -1295,11 +1298,15 @@ PersonaPreviewSceneDescription.Mesh=True
 PersonaPreviewSceneDescription.Additional Meshes=True
 AnimBoneCompressionSettings.Compression=True
 CharacterMovementComponent.AssetUserData=False
+Brush.TransformCommon=True
+Brush.BrushSettings=True
+Brush.Replication=True
+Brush.Actor=True
 
 [DetailPropertyExpansion]
-PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 Object=
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
@@ -1727,7 +1734,7 @@ NodeTemplateCacheCapMB=20.000000
 
 [RootWindow]
 ScreenPosition=X=4.800 Y=0.000
-WindowSize=X=1307.200 Y=747.200
+WindowSize=X=1308.800 Y=748.800
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
