--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -145,7 +145,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [DetailCustomWidgetExpansion]
-PostProcessVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Rendering Features.Rendering Features|Reflections,PostProcessVolume.Rendering Features.Rendering Features|Ambient Occlusion,PostProcessVolume.Rendering Features.Rendering Features|Translucency,PostProcessVolume.Rendering Features.Rendering Features|Misc,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Reflections,PostProcessVolume.Rendering Features.Rendering Features|Screen Space Reflections,PostProcessVolume.Rendering Features.Rendering Features|Global Illumination,PostProcessVolume.Lens.Lens|Depth of Field,PostProcessVolume.Lens.Lens|Mobile Depth of Field,
+PostProcessVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Rendering Features.Rendering Features
 BrushComponent=
 CryptoKeysSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,
 GeneralProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,
@@ -234,8 +234,8 @@ MovingPlatform_C=
 PropertyWrapper=PostProcessVolume.Lens.Lens,
 SideScrollerCharacter_C=
 BlendSpace1D=BlendSpace1D.BlendSamples.GroupName,BlendSpace1D.Axis Settings.Horizontal Axis,
-CameraComponent=CameraComponent.PostProcess.Rendering Features,CameraComponent.PostProcess.Rendering Features|Ambient Occlusion,CameraComponent.PostProcess.Rendering Features|Reflections,CameraComponent.PostProcess.Rendering Features|Screen Space Reflections,CameraComponent.PostProcess.Rendering Features|Translucency,CameraComponent.PostProcess.Rendering Features|Global Illumination,CameraComponent.PostProcess.Lens,CameraComponent.PostProcess.Lens|Bloom,CameraComponent.PostProcess.Lens|Mobile Depth of Field,
-CapsuleComponent=PostProcessVolume.Lens.Lens,PostProcessVolume.Rendering Features.Rendering Features|Ambient Cubemap,PostProcessVolume.Rendering Features.Rendering Features|Ambient Occlusion,
+CameraComponent=CameraComponent.PostProcess.Rendering Features,CameraComponent.PostProcess.Rendering Features
+CapsuleComponent=PostProcessVolume.Lens.Lens,PostProcessVolume.Rendering Features.Rendering Features
 
 [ContentBrowser]
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -260,7 +260,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Character
+ContentBrowserTab1.SelectedPaths=/Game/SideScrollerBP/sound
 SequenceBrowser.ActiveTypeFilters=
 SequenceBrowser.EnabledTypeFilters=
 SequenceBrowser.ActiveFrontendFilters=
@@ -291,7 +291,6 @@ LastLevel=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/SideScrollerBP/Blueprints/SideScrollerCharacter.SideScrollerCharacter
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1302,13 +1301,16 @@ Brush.TransformCommon=True
 Brush.BrushSettings=True
 Brush.Replication=True
 Brush.Actor=True
+FileMediaSource.File=True
+FileMediaSource.Platforms=True
+SoundNodeMixer.Mixer=True
 
 [DetailPropertyExpansion]
 PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
-Object=
+Object="\"Object.Voice Management.Voice Management|Priority\" \"Object.Voice Management.Voice Management|Concurrency\" \"Object.Effects.Effects|Source\" \"Object.Effects.Effects|Source.BusSends\" \"Object.Effects.Effects|Submix\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 PreviewMaterial="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.Lightmass.LightmassSettings\" "
@@ -1350,12 +1352,12 @@ LiveLinkSettings="\"Object.LiveLink.DefaultRoleSettings\" \"Object.LiveLink.Defa
 NiagaraSettings="\"Object.Niagara.AdditionalParameterEnums\" \"Object.Scalability.QualityLevels\" \"Object.Renderer.ComponentRendererWarningsPerClass\" "
 TakeRecorderProjectSettings="\"Object.Take Recorder.Settings.DefaultTracks\" \"Object.Take Recorder.Settings.DefaultTracks.DefaultTracks[0]\" \"Object.Take Recorder.Settings.DefaultTracks.DefaultTracks[0].DefaultPropertyTracks\" \"Object.Take Recorder.Settings.DefaultTracks.DefaultTracks[0].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Take Recorder.Settings.DefaultTracks.DefaultTracks[0].DefaultPropertyTracks.DefaultPropertyTracks[1]\" \"Object.Take Recorder.Settings.DefaultTracks.DefaultTracks[0].DefaultPropertyTracks.DefaultPropertyTracks[2]\" \"Object.Take Recorder.Settings.DefaultTracks.DefaultTracks[0].DefaultPropertyTracks.DefaultPropertyTracks[3]\" \"Object.Take Recorder.Settings.DefaultTracks.DefaultTracks[0].DefaultPropertyTracks.DefaultPropertyTracks[4]\" \"Object.Take Recorder.Settings.DefaultTracks.DefaultTracks[0].ExcludePropertyTracks\" \"Object.Take Recorder.Settings.DefaultTracks.DefaultTracks[0].ExcludePropertyTracks.ExcludePropertyTracks[0]\" \"Object.Take Recorder.Settings.DefaultTracks.DefaultTracks[0].ExcludePropertyTracks.ExcludePropertyTracks[1]\" \"Object.Take Recorder.Settings.DefaultTracks.DefaultTracks[0].ExcludePropertyTracks.ExcludePropertyTracks[2]\" \"Object.Take Recorder.Settings.DefaultTracks.DefaultTracks[1]\" \"Object.Take Recorder.Settings.DefaultTracks.DefaultTracks[1].DefaultPropertyTracks\" \"Object.Take Recorder.Settings.DefaultTracks.DefaultTracks[1].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Take Recorder.Settings.DefaultTracks.DefaultTracks[1].DefaultPropertyTracks.DefaultPropertyTracks[1]\" "
 SoundWave="\"Object.Effects.Effects|Source\" \"Object.Effects.Effects|Source.BusSends\" \"Object.Effects.Effects|Submix\" "
-SoundBase="\"Object.Effects.Effects|Source\" \"Object.Effects.Effects|Source.BusSends\" \"Object.Effects.Effects|Submix\" "
+SoundBase="\"Object.Voice Management.Voice Management|Priority\" \"Object.Voice Management.Voice Management|Concurrency\" \"Object.Effects.Effects|Source\" \"Object.Effects.Effects|Source.BusSends\" \"Object.Effects.Effects|Submix\" "
 InterpToMovementComponent=
 MovementComponent=
 ActorComponent=
 SoundAttenuation="\"Object.Settings.Attenuation.SubmixSendSettings\" \"Object.Settings.Attenuation.AttenuationShapeExtents\" "
-SoundCue="\"Object.Effects.Effects|Source\" \"Object.Effects.Effects|Source.BusSends\" \"Object.Effects.Effects|Submix\" "
+SoundCue="\"Object.Voice Management.Voice Management|Priority\" \"Object.Voice Management.Voice Management|Concurrency\" \"Object.Effects.Effects|Source\" \"Object.Effects.Effects|Source.BusSends\" \"Object.Effects.Effects|Submix\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
 
@@ -1476,28 +1478,29 @@ LastLogListing=LoadErrors
 InstalledPlugins=XRVisualization
 
 [ContentBrowserRecent]
-MRUItem0=/Game/SideScrollerBP/Blueprints/SideScrollerCharacter
-MRUItem1=/Game/Character/MainChar/Mesh/silah/silahmat
-MRUItem2=/Game/Character/MainChar/Mesh/silah/pistol
-MRUItem3=/Game/Character/MainChar/Mesh/silah/untitssssled_testuvmaterial_Emissive
-MRUItem4=/Game/Character/MainChar/Mesh/silahmat
-MRUItem5=/Game/Character/MainChar/Mesh/untitssssled
-MRUItem6=/Game/Character/Animations/ThirdPerson_AnimBP
-MRUItem7=/Game/Character/MainChar/Mesh/SK_Mannequin
-MRUItem8=/Game/Character/Animations/JumpRunJump
-MRUItem9=/Game/Character/Animations/NewBlendSpace1D
-MRUItem10=/Game/Character/Animations/PistolRunWalk
-MRUItem11=/Game/Character/Animations/PistolJumpRunJump
-MRUItem12=/Game/Character/Animations/PistolAnimations/PistolJump_UE
-MRUItem13=/Engine/Animation/DefaultAnimBoneCompressionSettings
-MRUItem14=/Game/Character/Animations/ThirdPersonJump_Loop
-MRUItem15=/Game/Character/Animations/ThirdPersonJump_Start
-MRUItem16=/Game/Character/Animations/ThirdPerson_IdleRun_2D
-MRUItem17=/Game/Character/PistolAnimations/PistolIdle1_UE
-MRUItem18=/Game/astro/Pistol_Jump
-MRUItem19=/Game/astro/astro
+MRUItem0=/Game/SideScrollerBP/sound/menumuzu
+MRUItem1=/Game/SideScrollerBP/sound/Red_Orchestra_2_Heroes_of_Stalingrad_-_Main_Theme
+MRUItem2=/Game/SideScrollerBP/Blueprints/SideScrollerCharacter
+MRUItem3=/Game/Character/MainChar/Mesh/silah/silahmat
+MRUItem4=/Game/Character/MainChar/Mesh/silah/pistol
+MRUItem5=/Game/Character/MainChar/Mesh/silah/untitssssled_testuvmaterial_Emissive
+MRUItem6=/Game/Character/MainChar/Mesh/silahmat
+MRUItem7=/Game/Character/MainChar/Mesh/untitssssled
+MRUItem8=/Game/Character/Animations/ThirdPerson_AnimBP
+MRUItem9=/Game/Character/MainChar/Mesh/SK_Mannequin
+MRUItem10=/Game/Character/Animations/JumpRunJump
+MRUItem11=/Game/Character/Animations/NewBlendSpace1D
+MRUItem12=/Game/Character/Animations/PistolRunWalk
+MRUItem13=/Game/Character/Animations/PistolJumpRunJump
+MRUItem14=/Game/Character/Animations/PistolAnimations/PistolJump_UE
+MRUItem15=/Engine/Animation/DefaultAnimBoneCompressionSettings
+MRUItem16=/Game/Character/Animations/ThirdPersonJump_Loop
+MRUItem17=/Game/Character/Animations/ThirdPersonJump_Start
+MRUItem18=/Game/Character/Animations/ThirdPerson_IdleRun_2D
+MRUItem19=/Game/Character/PistolAnimations/PistolIdle1_UE
 
 [PlacementMode]
+RecentlyPlaced=/Game/SideScrollerBP/sound/menumuzu.menumuzu;
 RecentlyPlaced=/Game/SideScrollerBP/Blueprints/MovingPlatform.MovingPlatform;
 RecentlyPlaced=/Game/SideScrollerBP/trimsheetscifi_airconditioner.trimsheetscifi_airconditioner;
 RecentlyPlaced=/Script/Engine.TextRenderActor;/Engine/Transient.ActorFactoryTextRender_0
@@ -1517,7 +1520,6 @@ RecentlyPlaced=/Game/SideScrollerBP/trimsheetscifi_Plane_013.trimsheetscifi_Plan
 RecentlyPlaced=/Game/SideScrollerBP/trimsheetscifi_door.trimsheetscifi_door;
 RecentlyPlaced=/Game/SideScrollerBP/trimsheetscifi_Plane_012.trimsheetscifi_Plane_012;
 RecentlyPlaced=/Game/SideScrollerBP/trimsheetscifi_Plane_011.trimsheetscifi_Plane_011;
-RecentlyPlaced=/Game/SideScrollerBP/trimsheetscifi_stair.trimsheetscifi_stair;
 
 [MaterialEditor]
 PrimType=1
@@ -1664,6 +1666,7 @@ PropertyWrapper.Variable=True
 FbxImportUI.Material=True
 FbxImportUI.Animation=True
 FbxImportUI.Miscellaneous=True
+SoundCue.Sound=True
 
 [AssetEditorToolkitTabLocation]
 /Game/SideScrollerBP/Material_001.Material_001=1
@@ -1695,6 +1698,7 @@ FbxImportUI.Miscellaneous=True
 /Game/Character/Animations/JumpRunJump.JumpRunJump=1
 /Game/Character/MainChar/Mesh/silah/silahmat.silahmat=1
 /Game/Character/MainChar/Mesh/silah/pistol.pistol=1
+/Game/SideScrollerBP/sound/menumuzu.menumuzu=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1734,7 +1738,7 @@ NodeTemplateCacheCapMB=20.000000
 
 [RootWindow]
 ScreenPosition=X=4.800 Y=0.000
-WindowSize=X=1308.800 Y=748.800
+WindowSize=X=1310.400 Y=750.400
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
