Fes adam Aka Mr Pull
eklendi.

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -137,6 +137,7 @@ MRUItem0=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
 bRealtimeMaterialViewport=False
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bShowGrid=False
 
 [LightingBuildOptions]
 QualityLevel=1
@@ -232,10 +233,10 @@ ButtonBP_C=PostProcessVolume.Lens.Lens,
 K2Node_VariableGet=PostProcessVolume.Lens.Lens,
 MovingPlatform_C=
 PropertyWrapper=PostProcessVolume.Lens.Lens,
-SideScrollerCharacter_C=
+SideScrollerCharacter_C=PostProcessVolume.Lens.Lens,PostProcessVolume.Rendering Features.Rendering Features,
 BlendSpace1D=BlendSpace1D.BlendSamples.GroupName,BlendSpace1D.Axis Settings.Horizontal Axis,
 CameraComponent=CameraComponent.PostProcess.Rendering Features,CameraComponent.PostProcess.Rendering Features
-CapsuleComponent=PostProcessVolume.Lens.Lens,PostProcessVolume.Rendering Features.Rendering Features
+CapsuleComponent=
 
 [ContentBrowser]
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -260,7 +261,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/SideScrollerBP/sound
+ContentBrowserTab1.SelectedPaths=/Game
 SequenceBrowser.ActiveTypeFilters=
 SequenceBrowser.EnabledTypeFilters=
 SequenceBrowser.ActiveFrontendFilters=
@@ -291,6 +292,8 @@ LastLevel=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/SideScrollerBP/Blueprints/SideScrollerCharacter.SideScrollerCharacter
+OpenAssetsAtExit=/Game/Character/MainChar/Mesh/fesadam/MrPullMesh.MrPullMesh
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1310,7 +1313,7 @@ PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendable
 Volume="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
-Object="\"Object.Voice Management.Voice Management|Priority\" \"Object.Voice Management.Voice Management|Concurrency\" \"Object.Effects.Effects|Source\" \"Object.Effects.Effects|Source.BusSends\" \"Object.Effects.Effects|Submix\" "
+Object=
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 PreviewMaterial="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.Lightmass.LightmassSettings\" "
@@ -1375,7 +1378,7 @@ LodDistance6=0.000000
 LodDistance7=0.000000
 MinimumLodNumber=0
 LodNumber=0
-bImportAnimations=True
+bImportAnimations=False
 bImportMaterials=False
 bImportTextures=True
 
@@ -1472,32 +1475,32 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=LoadErrors
+LastLogListing=FBXImport
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
 
 [ContentBrowserRecent]
-MRUItem0=/Game/SideScrollerBP/sound/menumuzu
-MRUItem1=/Game/SideScrollerBP/sound/Red_Orchestra_2_Heroes_of_Stalingrad_-_Main_Theme
-MRUItem2=/Game/SideScrollerBP/Blueprints/SideScrollerCharacter
-MRUItem3=/Game/Character/MainChar/Mesh/silah/silahmat
-MRUItem4=/Game/Character/MainChar/Mesh/silah/pistol
-MRUItem5=/Game/Character/MainChar/Mesh/silah/untitssssled_testuvmaterial_Emissive
-MRUItem6=/Game/Character/MainChar/Mesh/silahmat
-MRUItem7=/Game/Character/MainChar/Mesh/untitssssled
-MRUItem8=/Game/Character/Animations/ThirdPerson_AnimBP
-MRUItem9=/Game/Character/MainChar/Mesh/SK_Mannequin
-MRUItem10=/Game/Character/Animations/JumpRunJump
-MRUItem11=/Game/Character/Animations/NewBlendSpace1D
-MRUItem12=/Game/Character/Animations/PistolRunWalk
-MRUItem13=/Game/Character/Animations/PistolJumpRunJump
-MRUItem14=/Game/Character/Animations/PistolAnimations/PistolJump_UE
-MRUItem15=/Engine/Animation/DefaultAnimBoneCompressionSettings
-MRUItem16=/Game/Character/Animations/ThirdPersonJump_Loop
-MRUItem17=/Game/Character/Animations/ThirdPersonJump_Start
-MRUItem18=/Game/Character/Animations/ThirdPerson_IdleRun_2D
-MRUItem19=/Game/Character/PistolAnimations/PistolIdle1_UE
+MRUItem0=/Game/Character/MainChar/Mesh/fesadam/MrPullMesh
+MRUItem1=/Game/SideScrollerBP/Blueprints/SideScrollerCharacter
+MRUItem2=/Game/SideScrollerBP/sound/menumuzu
+MRUItem3=/Game/Character/MainChar/Mesh/fesadam/S
+MRUItem4=/Game/Character/MainChar/Mesh/fesadam/mrpull
+MRUItem5=/Game/SideScrollerBP/sound/Red_Orchestra_2_Heroes_of_Stalingrad_-_Main_Theme
+MRUItem6=/Game/Character/MainChar/Mesh/silah/silahmat
+MRUItem7=/Game/Character/MainChar/Mesh/silah/pistol
+MRUItem8=/Game/Character/MainChar/Mesh/silah/untitssssled_testuvmaterial_Emissive
+MRUItem9=/Game/Character/MainChar/Mesh/silahmat
+MRUItem10=/Game/Character/MainChar/Mesh/untitssssled
+MRUItem11=/Game/Character/Animations/ThirdPerson_AnimBP
+MRUItem12=/Game/Character/MainChar/Mesh/SK_Mannequin
+MRUItem13=/Game/Character/Animations/JumpRunJump
+MRUItem14=/Game/Character/Animations/NewBlendSpace1D
+MRUItem15=/Game/Character/Animations/PistolRunWalk
+MRUItem16=/Game/Character/Animations/PistolJumpRunJump
+MRUItem17=/Game/Character/Animations/PistolAnimations/PistolJump_UE
+MRUItem18=/Engine/Animation/DefaultAnimBoneCompressionSettings
+MRUItem19=/Game/Character/Animations/ThirdPersonJump_Loop
 
 [PlacementMode]
 RecentlyPlaced=/Game/SideScrollerBP/sound/menumuzu.menumuzu;
@@ -1699,6 +1702,9 @@ SoundCue.Sound=True
 /Game/Character/MainChar/Mesh/silah/silahmat.silahmat=1
 /Game/Character/MainChar/Mesh/silah/pistol.pistol=1
 /Game/SideScrollerBP/sound/menumuzu.menumuzu=1
+/Game/Character/MainChar/Mesh/fesadam/mrpull.mrpull=1
+/Game/Character/MainChar/Mesh/fesadam/S.S=1
+/Game/Character/MainChar/Mesh/fesadam/MrPullMesh.MrPullMesh=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1738,7 +1744,7 @@ NodeTemplateCacheCapMB=20.000000
 
 [RootWindow]
 ScreenPosition=X=4.800 Y=0.000
-WindowSize=X=1310.400 Y=750.400
+WindowSize=X=1312.000 Y=752.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
