--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -269,7 +269,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/SideScrollerBP/Blueprints/Gun
+ContentBrowserTab1.SelectedPaths=/Game/SideScrollerBP/BuildFiles
 SequenceBrowser.ActiveTypeFilters=
 SequenceBrowser.EnabledTypeFilters=
 SequenceBrowser.ActiveFrontendFilters=
@@ -302,9 +302,6 @@ LastLevel=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/SideScrollerBP/Blueprints/SideScrollerCharacter.SideScrollerCharacter
-OpenAssetsAtExit=/Game/SideScrollerBP/Blueprints/Gun/BulletBP.BulletBP
-OpenAssetsAtExit=/Niagara/DefaultAssets/Templates/Systems/SimpleExplosion.SimpleExplosion
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1593,7 +1590,7 @@ LodDistance7=0.000000
 MinimumLodNumber=0
 LodNumber=0
 bImportAnimations=False
-bImportMaterials=True
+bImportMaterials=False
 bImportTextures=True
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
@@ -1695,28 +1692,29 @@ LastLogListing=PIE
 InstalledPlugins=XRVisualization
 
 [ContentBrowserRecent]
-MRUItem0=/Niagara/DefaultAssets/Templates/Systems/SimpleExplosion
-MRUItem1=/Game/Character/MainChar/Mesh/silah/Brass
-MRUItem2=/Game/Character/MainChar/Mesh/silah/buletandkovan_Casing
-MRUItem3=/Game/Character/MainChar/Mesh/silah/Bronze
-MRUItem4=/Game/Character/MainChar/Mesh/silah/buletandkovan_Bullet
-MRUItem5=/Game/SideScrollerBP/Blueprints/Gun/BulletBP
-MRUItem6=/Game/SideScrollerBP/Blueprints/SideScrollerCharacter
-MRUItem7=/Game/SideScrollerBP/BuildFiles/Materials/Material_Normal_OpenGL
-MRUItem8=/Game/Character/MainChar/Mesh/fesadam/pngtree-black-rope-isolated-train-png-image_10862414
-MRUItem9=/Game/Character/MainChar/Mesh/fesadam/fes
-MRUItem10=/Game/Character/MainChar/Mesh/fesadam/withcape
-MRUItem11=/Game/Character/MainChar/Mesh/fesadam/S_PhysicsAsset
-MRUItem12=/Game/Character/MainChar/Mesh/fesadam/MrPullMesh
-MRUItem13=/Game/Character/MainChar/Materials/cape
-MRUItem14=/Game/Character/MainChar/Mesh/fesadam/S
-MRUItem15=/Game/SideScrollerBP/Blueprints/DoorBP_2
-MRUItem16=/Game/SideScrollerBP/Blueprints/DoorBP
-MRUItem17=/Game/Character/Animations/pistolrunwalkfrontbackwards
-MRUItem18=/Game/SideScrollerBP/Blueprints/MyAimOffset
-MRUItem19=/Game/SideScrollerBP/Blueprints/NewAimOffsetBlendSpace
+MRUItem0=/Game/SideScrollerBP/BuildFiles/trimsheetscifi_Plane_012
+MRUItem1=/Game/SideScrollerBP/BuildFiles/trimsheetscifi
+MRUItem2=/Niagara/DefaultAssets/Templates/Systems/SimpleExplosion
+MRUItem3=/Game/Character/MainChar/Mesh/silah/Brass
+MRUItem4=/Game/Character/MainChar/Mesh/silah/buletandkovan_Casing
+MRUItem5=/Game/Character/MainChar/Mesh/silah/Bronze
+MRUItem6=/Game/Character/MainChar/Mesh/silah/buletandkovan_Bullet
+MRUItem7=/Game/SideScrollerBP/Blueprints/Gun/BulletBP
+MRUItem8=/Game/SideScrollerBP/Blueprints/SideScrollerCharacter
+MRUItem9=/Game/SideScrollerBP/BuildFiles/Materials/Material_Normal_OpenGL
+MRUItem10=/Game/Character/MainChar/Mesh/fesadam/pngtree-black-rope-isolated-train-png-image_10862414
+MRUItem11=/Game/Character/MainChar/Mesh/fesadam/fes
+MRUItem12=/Game/Character/MainChar/Mesh/fesadam/withcape
+MRUItem13=/Game/Character/MainChar/Mesh/fesadam/S_PhysicsAsset
+MRUItem14=/Game/Character/MainChar/Mesh/fesadam/MrPullMesh
+MRUItem15=/Game/Character/MainChar/Materials/cape
+MRUItem16=/Game/Character/MainChar/Mesh/fesadam/S
+MRUItem17=/Game/SideScrollerBP/Blueprints/DoorBP_2
+MRUItem18=/Game/SideScrollerBP/Blueprints/DoorBP
+MRUItem19=/Game/Character/Animations/pistolrunwalkfrontbackwards
 
 [PlacementMode]
+RecentlyPlaced=/Game/SideScrollerBP/BuildFiles/trimsheetscifi_Plane_012.trimsheetscifi_Plane_012;
 RecentlyPlaced=/Game/SideScrollerBP/Blueprints/DoorBP_2.DoorBP_2;
 RecentlyPlaced=/Game/SideScrollerBP/Blueprints/DoorBP.DoorBP;
 RecentlyPlaced=/Game/SideScrollerBP/Blueprints/ButtonBP.ButtonBP;
@@ -1736,7 +1734,6 @@ RecentlyPlaced=/Game/SideScrollerBP/trimsheetscifi_borubended_Cube_011.trimsheet
 RecentlyPlaced=/Game/SideScrollerBP/trimsheetscifi_boru.trimsheetscifi_boru;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/SideScrollerBP/trimsheetscifi_Plane_013.trimsheetscifi_Plane_013;
-RecentlyPlaced=/Game/SideScrollerBP/trimsheetscifi_door.trimsheetscifi_door;
 
 [MaterialEditor]
 PrimType=1
@@ -1958,6 +1955,8 @@ ParticleSystemComponent.Particles=True
 /Game/Character/MainChar/Mesh/silah/buletandkovan_Casing.buletandkovan_Casing=1
 /Game/Character/MainChar/Mesh/silah/Brass.Brass=1
 /Niagara/DefaultAssets/Templates/Systems/SimpleExplosion.SimpleExplosion=1
+/Game/SideScrollerBP/BuildFiles/trimsheetscifi.trimsheetscifi=1
+/Game/SideScrollerBP/BuildFiles/trimsheetscifi_Plane_012.trimsheetscifi_Plane_012=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1997,7 +1996,7 @@ NodeTemplateCacheCapMB=20.000000
 
 [RootWindow]
 ScreenPosition=X=12.000 Y=40.000
-WindowSize=X=1324.800 Y=764.800
+WindowSize=X=1328.000 Y=768.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
